--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: url(images/background.avif);
+    background-image: url(background.avif);
     background-size: cover; 
     background-repeat: no-repeat;
     background-attachment: fixed;
