--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 
 body{
-    background-image: url(images/fundoescada.jpg);
+    background-image: url(fundoescada.jpg);
     background-size: cover; 
     background-repeat: no-repeat;
     background-attachment: fixed;
