--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 
 body{
-    background-image: url(fundoescada.jpg);
+    background-image: url(images/fundoescada.jpg);
     background-size: cover; 
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -20,7 +20,11 @@ body{
 .flex {
     display: flex;
 }
-
+button:hover{
+    box-shadow: 0px 0px 8px #007bff;
+    transform: scale(1.05);
+    
+}
 /*Estilo do cabeçalho*/
 
 header{
@@ -56,6 +60,8 @@ li a .dropbtn {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    transform: scale(1.1);
+    font-weight: 700;
 }
 li.dropdown {
     display: inline-block;
@@ -63,11 +69,12 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #928a8a;
+    background-color: #928a8a21;
     min-width: 160px;
     box-shadow: 0px 8px 10px rgba(0,0,0,0.2);
     z-index: 1;
     opacity: 0.7;
+    border-radius: 25%;
 }
 .dropdown-content a{
     color: black;
@@ -75,6 +82,8 @@ li.dropdown {
     text-decoration: none;
     display: block;
     text-align: left;
+    border-radius: 30%;
+    font-weight: 500;
 }
 .dropdown-content a:hover {
     background-color: #757070;
@@ -94,7 +103,7 @@ img{
 /*Estilo do topo do site*/
 
 section.topo-do-site{
-    padding: 100px 4%;
+    padding: 150px 4%;
   
 
 }
@@ -124,7 +133,7 @@ section.topo-do-site .flex {
    
 }
 .btn-meu-curriculo button {
-    background-color: #a1a1a1;
+    background-color: #007bff;
     padding: 10px 40px;
     font-size:18px;
     font-weight: 600;
@@ -163,6 +172,119 @@ section.topo-do-site .flex {
         top: 0;
     }
     100%{
-        top: 70px;
+        top: 60px;
     }
+}
+
+/* SOBRE */
+
+section.sobre {
+    padding: 225px 4%;
+}
+section.sobre .flex{
+    align-items: center;
+    gap: 60px;
+}
+.sobre .txt-sobre {
+    color: #fff;
+
+}
+.sobre .txt-sobre h2{
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 30px;
+}
+.sobre .txt-sobre h2 span{
+    color: #007bff;
+    display: block;
+}
+.sobre .txt-sobre p{
+    margin: 20px 0;
+    text-align: justify;
+}
+.btn-social button{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 0;
+    background-color: #007bff9d;
+    font-size: 22px;
+    cursor: pointer;
+    margin: 0 5px;
+    transition: .2s;
+}
+.sobre .img-sobre img{
+   width: 250px;
+}
+
+/*ESTILO DO FORMULÁRIO DE CONTATO */
+
+h2.titulo{
+    color: #fff;
+    font-size: 38px;
+    text-align: center;
+}
+h2.titulo span{
+    color: #007bff;
+}
+section.formulario{
+    padding: 80px 4%;
+}
+form{
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 40px;
+}
+form input, form textarea{
+    width: 100%;
+    background-color: rgb(24, 24, 24);
+    border: 0;
+    outline: 0;
+    padding: 20px 15px;
+    border-radius: 15px;
+    color: #fff;
+    font-size: 18px;
+}
+form textarea{
+    resize: none;
+    max-height: 200px;
+}
+form .btn-enviar{
+    margin-top: 20px;
+    text-align: center;
+}
+form .btn-enviar input{
+    width: 120px;
+    background-color: #007bff;
+    color: black;
+    font-weight: 700;
+    cursor: pointer;
+    text-align: center;
+}
+
+/* RODAPÉ */
+
+footer{
+    padding: 70px 4%;
+    box-shadow: 0 0 25px 10px #ffffff1d;
+}
+footer .flex{
+    justify-content: space-between;    
+}
+footer .line-footer p i{ 
+    color: #007bff;
+    font-size: 27px;
+}
+footer .line-footer p a{
+    color: #fff;
+}
+footer .line-footer {
+    padding: 10px 0;
+}
+.borda {
+    border-top: 2px solid #007bff;
 }
