--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 
 body{
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(10, 10, 10, 0.9)), url(images/fundoescada.jpg);
     background-image: url(fundoescada.jpg);
     background-size: cover; 
     background-repeat: no-repeat;
@@ -287,4 +288,48 @@ footer .line-footer {
 }
 .borda {
     border-top: 2px solid #007bff;
+}
+
+
+/*Responsividade*/
+
+@media (max-width: 768px) {
+    header .interface {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    header nav ul {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    header nav ul li {
+        padding: 10px 0;
+    }
+
+    section.topo-do-site .flex {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .topo-do-site .img-topo-site img {
+        width: 200px;
+    }
+
+    section.sobre .flex {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .sobre .img-sobre img {
+        width: 200px;
+    }
+
+    .btn-social {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 }
